# indicator

./: CMakeLists.txt  README.md
shaders/: default_fragment.glsl  default_vertex.glsl
src/: main.cpp
src/renderer/: renderer.cpp  renderer.h  shader.cpp  shader.h  sprite.h  sprite_renderer.cpp  sprite_renderer.h  texture.cpp  texture.h
src/renderer/shaders/: spirte.vs  sprite.fs
src/resources/: mesh.h  mesh_loader.cpp  mesh_loader.h
src/system/: window.cpp  window.h
